# async-yacut

./: .gitignore  .pre-commit-config.yaml  README.md  constants.py  main.py  pyproject.toml  pytest.ini  readme.md  settings.py
migrations/versions/: 2f41039a5434_add_field_filename.py  3490b7d45d96_remove_field_filename.py  bc585efa7fab_added_urlmap_model.py
yacut/: __init__.py  anna.txt  api_views.py  error_handlers.py  filename.txt  forms.py  models.py  utils.py  views.py  yandex.py
yacut/templates/: 500.html  base.html  footer.html  header.html  index.html  upload.html
