[project]
name = "async-yacut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.4.0",
    "aiohttp==3.10.5",
    "aiosignal==1.3.1",
    "alembic==1.12.0",
    "asgiref==3.8.1",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "blinker==1.8.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "flake8==5.0.4",
    "flask==3.0.2",
    "flask-migrate==4.0.5",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "frozenlist==1.4.1",
    "greenlet==3.0.3",
    "idna==3.8",
    "importlib-metadata==7.1.0",
    "iniconfig==2.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "mako==1.3.3",
    "markupsafe==2.1.5",
    "mccabe==0.7.0",
    "multidict==6.0.5",
    "packaging==24.0",
    "pillow==10.4.0",
    "pluggy==1.5.0",
    "py==1.11.0",
    "pycodestyle==2.9.1",
    "pyflakes==2.5.0",
    "pytest==7.1.3",
    "pytest-aiohttp==1.0.5",
    "pytest-asyncio==0.23.4",
    "pytest-env==0.6.2",
    "pytest-tornasync==0.6.0.post2",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "six==1.16.0",
    "sqlalchemy==2.0.21",
    "tomli==2.0.1",
    "typing-extensions==4.11.0",
    "werkzeug==3.0.0",
    "wtforms==3.0.1",
    "yarl==1.9.9",
    "zipp==3.18.1",
]
